  :class:`rpy2.robjects.vectors.StrVector`) should be used instead.

- mod:`rpy2.rpy_classic`, an implementation of the `rpy` interface using
  :mod:`rpy2.rinterface` is no longer available.

- :class:`rpy2.robjects.ParsedCode` and
  :class:`rpy2.robjects.SourceCode` are moved to
  :class:`rpy2.robjects.packages.ParsedCode` and
  :class:`rpy2.robjects.packages.SourceCode`.


Bugs fixed
----------

- Row names in R data frames were lost when converting to pandas data frames
  (issue #484).


Release 2.9.6
=============

Bugs fixed
----------

- Latest release of :mod:`pandas` deprecated :meth:`DataFrame.from_items`.
  (issue #514).

- Latest release of :mod:`pandas` requires categories to be a list
  (not an other sequence).

Known issues
------------

- The numpy buffer implemented by R arrays is broken for complex numbers


Release 2.9.5
=============

Bugs fixed
----------

- Missing values in pandas :class:`Category` series were creating
  invalid R factors when converted (issue #493).


Release 2.9.4
=============

Bugs fixed
----------

- Fallback for failure to import numpy or pandas is now dissociated from
  failure to import :mod:`numpy2ri` or :mod:`pandas2ri` (issue #463).

- :func:`repr` for R POSIX date/time vectors is now showing a string
  representation of the date/time rather than the timestamp as a float
  (issue #467).

- The HTML representation of R data frame (the default representation in the
  Jupyter notebook) was displaying an inconsistent number of rows
  (found while workin on issue #466).

- Handle time zones in timezones in Pandas when converting to R data frames
  (issue #454).

- When exiting the Python process, the R cleanup is now explicitly request
  to happen before Python's exit. This is preventing possible segfaults
  the process is terminating (issue #471).

- dplyr method `ungroup()` was missing from
  :class:`rpy2.robjects.lib.dplyr.DataFrame` (issue #473).


Release 2.9.3
=============

Bugs fixed
----------
